--- a/gemstone.html
+++ b/gemstone.html
@@ -618,6 +618,16 @@
             transform: translate(-50%, 0);
         }
 
+        .gems-jewels a img {
+            transition: all 2s;
+        }
+
+        .gems-jewels a img:hover {
+            transform: scale(1.1);
+        }
+
+
+
         @media (max-width:1199.98px) {
             :root {
                 --ringWidth: 400px;
@@ -638,30 +648,179 @@
 
 <body>
     <section class="gemstone-banner">
-        <img src="https://www.michaeltrio.com/pub/media/0gemstone/gemstone-banner.jpeg" alt="" class="w-100 visible-xs">
+        <img src="https://www.michaeltrio.com/pub/media/0gemstone/gemstone-banner.jpeg" alt=""
+            class="w-100 visible-xs mb-5">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 banner-height-400 hidden-xs"></div>
-                <div class="col-sm-12 box">
+                <div class="col-sm-12 box ">
                     <div>
                         <h1 class="text-center mb-3">Gemstones</h1>
                         <h3 class="text-center">Available in 360 view</h3>
                         <p class="text-center py-3">Experience the vivid colours of our Natural Gemstones right before
                             your
                             very eyes. Take your pick from Sapphire, Ruby and more.</p>
-                        <a href="#" class="btn btn-blue small-btn">Shop Gemstones</a>
+                        <a href="https://www.michaeltrio.com/gemstones/ruby" class="btn btn-blue small-btn">Shop
+                            Gemstones</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+    <section class="diamond-by-shape py-5">
 
-    <div class="container pt-5 pb-3">
-        <h1 class="text-center mb-3">Gemstones</h1>
-        <p class="text-center py-3">Experience the vivid colours of our Natural Gemstones right before
-            your
-            very eyes. Take your pick from Sapphire, Ruby and more.</p>
+        <div class="container ">
+            <div class="row">
+                <div class="col-xs-24 ">
+
+                    <h1 class="text-center">Shop by Gemstones</h1>
+                    <div class="my-5">
+                        <div id="diamonds-slider" class="owl-carousel owl-theme img-slider mb-3" data-mage-init='{"themewidgets":{"jewel.slider":{"sliderConfig":{"nav":true,"dots":true,"center":true,"loop":true,"autoWidth":false,"autoplay":false,"responsive":{
+                                "0": {
+                                    "items":1
+                                },
+                               "375": {
+                                    "items":3
+                                },
+                                "768":{
+                                    "items":5
+                                },
+                                "1200":{
+                                  "items":7
+                              }
+                            }}}}}'>
+                            <div class="item">
+                                <a href="#">
+                                    <article class="text-center">
+                                        <figure>
+                                            <img src="https://www.michaeltrio.com/pub/media/gemstone/gemstone-ruby.jpg"
+                                                class="img-responsive">
+                                        </figure>
+
+                                        <div class="for-title pt-3 diamond-name">Ruby</div>
+                                    </article>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#"></a>
+                                <article class="text-center">
+                                    <figure>
+                                        <img src="https://www.michaeltrio.com/pub/media/gemstone/gemstone-emerald.jpg"
+                                            class="img-responsive">
+                                    </figure>
+                                    <div class="for-title pt-3 diamond-name">Emerald</div>
+                                </article>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <article class="text-center">
+                                        <figure>
+                                            <img src="https://www.michaeltrio.com/pub/media/gemstone/gemstone-sapphire.jpg"
+                                                class="img-responsive">
+                                        </figure>
+                                        <div class="for-title pt-3 diamond-name">Sapphire</div>
+                                    </article>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <article class="text-center">
+                                        <figure>
+                                            <img src="https://www.michaeltrio.com/pub/media/gemstone/gemstone-topaz.jpg"
+                                                class="img-responsive">
+                                        </figure>
+                                        <div class="for-title pt-3 diamond-name">Topza</div>
+                                    </article>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <article class="text-center">
+                                        <figure>
+                                            <img src="https://www.michaeltrio.com/pub/media/gemstone/gemstone-morganite.jpg"
+                                                class="img-responsive">
+                                        </figure>
+                                        <div class="for-title pt-3 diamond-name">Morganite</div>
+
+                                    </article>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <article class="text-center">
+                                        <figure>
+                                            <img src="https://www.michaeltrio.com/pub/media/gemstone/gemstone-tanzanite.jpg"
+                                                class="img-responsive">
+                                        </figure>
+                                        <div class="for-title pt-3 diamond-name">Tanzanite</div>
+                                    </article>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <article class="text-center">
+                                        <figure>
+                                            <img src="https://www.michaeltrio.com/pub/media/gemstone/gemstone-spinel.jpg"
+                                                class="img-responsive">
+                                        </figure>
+                                        <div class="for-title pt-3 diamond-name">Spinel</div>
+                                    </article>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <article class="text-center">
+                                        <figure>
+                                            <img src="https://www.michaeltrio.com/pub/media/gemstone/gemstone-aquamarine.jpg"
+                                                class="img-responsive">
+                                        </figure>
+                                        <div class="for-title pt-3 diamond-name">Aquamarine</div>
+
+                                    </article>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <article class="text-center">
+                                        <figure>
+                                            <img src="https://www.michaeltrio.com/pub/media/gemstone/gemstone-alexandrite.jpg"
+                                                class="img-responsive">
+                                        </figure>
+                                        <div class="for-title pt-3 diamond-name">Alexandrite</div>
+                                    </article>
+                                </a>
+                            </div>
+                            <div class="item">
+                                <a href="#">
+                                    <article class="text-center">
+                                        <figure>
+                                            <img src="https://www.michaeltrio.com/pub/media/gemstone/gemstone-tourmaline.jpg"
+                                                class="img-responsive">
+                                        </figure>
+                                        <div class="for-title pt-3 diamond-name">Tourmaline</div>
+                                    </article>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <div class="container pb-3">
+        <h1 class="text-center mb-3">Design Your Own</h1>
+        <p class="text-center pt-3 pb-5 p-wrapper">Select from our large selection of loose gemstones and matching your
+            gem
+            with a
+            beautiful setting in the precious metal of your choice.</p>
     </div>
 
 
@@ -675,8 +834,10 @@
                 </div>
                 <div class="col-sm-10 box hidden-xs">
                     <div>
-                        <div> <a href="#" class="btn btn-blue small-btn mb-2">Shop Gemstones</a></div>
-                        <div> <a href="#" class="btn btn-blue small-btn">Shop Gemstones</a></div>
+                        <div> <a href="https://www.michaeltrio.com/gemstones/ruby"
+                                class="btn btn-blue large-btn mb-2">Start With A Gemstones</a></div>
+                        <div> <a href="https://www.michaeltrio.com/engagement-rings/setting/"
+                                class="btn btn-blue large-btn">Start With A Setting</a></div>
                     </div>
                 </div>
             </div>
@@ -685,28 +846,32 @@
 
     <div class="container pt-5 pb-3 box visible-xs">
         <div>
-            <div> <a href="#" class="btn btn-blue small-btn mb-2">Shop Gemstones</a></div>
-            <div> <a href="#" class="btn btn-blue small-btn">Shop Gemstones</a></div>
+            <div> <a href="https://www.michaeltrio.com/gemstones/ruby" class="btn btn-blue large-btn mb-2">Start With A
+                    Gemstones</a></div>
+            <div> <a href="https://www.michaeltrio.com/engagement-rings/setting/" class="btn btn-blue large-btn">Start
+                    With A Setting</a></div>
         </div>
     </div>
 
 
-    <section>
+    <section class="gems-jewels">
         <div class="container pt-5 pb-3">
-            <h1 class="text-center mb-4">Gemstones</h1>
-            <p class="text-center mb-5">Experience the vivid colours of our Natural Gemstones right before
-                your
-                very eyes. Take your pick from Sapphire, Ruby and more.</p>
+            <h1 class="text-center mb-4">Shop by Style</h1>
+            <p class="text-center mb-5 p-wrapper">Propose with a unique, colorful gemstone ring or choose a vibrant
+                gemstone ring,
+                pendant or earrings for a special occasion.</p>
             <div class="row d-block">
 
                 <div class="col-sm-8 col-xs-24">
                     <a href="https://www.michaeltrio.com/jewellery/rings/gemstone/" class="textblack">
                         <div class="bg-orange mb-3">
-                            <div>
+
+                            <div class="overflow-hidden">
                                 <img src="https://www.michaeltrio.com/pub/media/0gemstone/MTM2-Gemstones-_jewellery-1.jpg"
                                     alt="" class="w-100">
                             </div>
                             <h5 class="py-3 for-title">Gemstone Ring</h5>
+
 
                         </div>
                     </a>
@@ -714,7 +879,7 @@
                 <div class="col-sm-8 col-xs-24">
                     <a href="https://www.michaeltrio.com/jewellery/earrings/gemstone/" class="textblack">
                         <div class="bg-orange mb-3">
-                            <div>
+                            <div class="overflow-hidden">
                                 <img src="https://www.michaeltrio.com/pub/media/0gemstone/MTM2-Gemstones-jewellery-2.jpg"
                                     alt="" class="w-100">
                             </div>
@@ -727,7 +892,7 @@
                 <div class="col-sm-8 col-xs-24">
                     <a href="https://www.michaeltrio.com/jewellery/necklaces/gemstone/" class="textblack">
                         <div class="bg-orange mb-3">
-                            <div>
+                            <div class="overflow-hidden">
                                 <img src="https://www.michaeltrio.com/pub/media/0gemstone/MTM2-Gemstones-jewellery-3.jpg"
                                     alt="" class="w-100">
                             </div>
@@ -736,6 +901,10 @@
                     </a>
                 </div>
 
+            </div>
+
+            <div class="text-center py-3">
+                <a href="https://www.michaeltrio.com/gemstones/ruby/" class="btn btn-blue small-btn">Shop Gemstones</a>
             </div>
         </div>
     </section>
